# And-DrawStringfornoCache

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CppSurfaceView.cpp  CppSurfaceView.h  DrawString.cpp  DrawString.h  UtilPng.cpp  UtilPng.h
app/src/main/cpp/libpng/: png.h
app/src/main/java/com/test/cppdrawstringnocache/: MainActivity.java  NativeFunc.java
app/src/main/res/layout/: activity_main.xml
